--- a/arch/arm64/boot/dts/freescale/imx8mm-evk-rpmsg.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mm-evk-rpmsg.dts
@@ -5,7 +5,7 @@
 
 /dts-v1/;
 #include <dt-bindings/rpmsg/imx_srtm.h>
-#include "imx8mm-evk.dts"
+#include "imx8mm-evkb.dts"
 
 / {
 	reserved-memory {
