[FIO internal] arch: arm64: dts: imx8mp: enable I2C5 bus
Enable I2C5 bus to connect SE050. Switch GPIO pad to use I2C5 instead
of flexcan1.

Signed-off-by: Vanessa Maegima <vanessa.maegima@foundries.io>
Signed-off-by: Oleksandr Suvorov <oleksandr.suvorov@foundries.io>

--- a/arch/arm64/boot/dts/freescale/imx8mp-evk.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mp-evk.dts
@@ -710,14 +710,12 @@
 	clock-frequency = <100000>; /* Lower clock speed for external bus. */
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c5>;
-	status = "disabled"; /* can1 pins conflict with i2c5 */
-
 	/* GPIO 2 of PCA6416 is used to switch between CAN1 and I2C5 functions:
 	 *     LOW:  CAN1 (default, pull-down)
 	 *     HIGH: I2C5
-	 * You need to set it to high to enable I2C5 (for example, add gpio-hog
-	 * in pca6416 node).
 	 */
+	pinctrl-assert-gpios = <&pca6416 2 GPIO_ACTIVE_HIGH>;
+	status = "okay";
 };
 
 &irqsteer_hdmi {
