[FIO internal] arm64: dts: imx8mn-evk.dtsi: re-add bluetooth reset configuration
This fixes the Murata 1MW bluetooth initialization

Signed-off-by: Michael Scott <mike@foundries.io>
Signed-off-by: Ricardo Salveti <ricardo@foundries.io>
Signed-off-by: Oleksandr Suvorov <oleksandr.suvorov@foundries.io>

--- a/arch/arm64/boot/dts/freescale/imx8mn-evk.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8mn-evk.dtsi
@@ -55,6 +55,14 @@
 		enable-active-high;
 	};
 
+	modem_reset: modem-reset {
+		compatible = "gpio-reset";
+		reset-gpios = <&gpio2 6 GPIO_ACTIVE_LOW>;
+		reset-delay-us = <2000>;
+		reset-post-delay-ms = <40>;
+		#reset-cells = <0>;
+	};
+
 	ir-receiver {
 		compatible = "gpio-ir-receiver";
 		gpios = <&gpio1 13 GPIO_ACTIVE_LOW>;
@@ -488,6 +496,7 @@
 	assigned-clocks = <&clk IMX8MN_CLK_UART1>;
 	assigned-clock-parents = <&clk IMX8MN_SYS_PLL1_80M>;
 	fsl,uart-has-rtscts;
+	resets = <&modem_reset>;
 	status = "okay";
 
 	bluetooth {
@@ -518,8 +527,10 @@
 	pinctrl-1 = <&pinctrl_usdhc1_100mhz>, <&pinctrl_wlan>;
 	pinctrl-2 = <&pinctrl_usdhc1_200mhz>, <&pinctrl_wlan>;
 	bus-width = <4>;
+	pm-ignore-notify;
 	keep-power-in-suspend;
 	non-removable;
+	cap-power-off-card;
 	wakeup-source;
 	fsl,sdio-async-interrupt-enabled;
 	/delete-property/ vmmc-supply;
@@ -773,6 +784,7 @@
 			MX8MN_IOMUXC_UART1_TXD_UART1_DCE_TX	0x140
 			MX8MN_IOMUXC_UART3_RXD_UART1_DCE_CTS_B	0x140
 			MX8MN_IOMUXC_UART3_TXD_UART1_DCE_RTS_B	0x140
+			MX8MN_IOMUXC_SD1_DATA4_GPIO2_IO6	0x19
 		>;
 	};
 
